fixed spacing on site

--- a/Example_1/stylesheets/index.scss
+++ b/Example_1/stylesheets/index.scss
@@ -7,18 +7,17 @@ body {
   flex-direction: row;
   .left-side-bar {
     width: 60%;
-    min-width: 900px;
-    max-width: 900px;
+    min-width: 725px;
+    max-width: 850px;
     background-color: #f2e3da;
     height: 850px;
     margin: 120px 0px 100px 60px;
     .nav-container {
-      width: 100px;
+      width: 80%;
       display: flex;
       padding: 10px;
       margin: 30px;
       list-style-type: none;
-
       .site-name {
         margin-top: 15px;
         color: black;
@@ -41,7 +40,7 @@ body {
       }
       div {
         display: flex;
-        margin-left: 230px;
+        margin-left: 15%;
         img {
           margin-top: 10px;
           width: 30px;
@@ -91,12 +90,13 @@ body {
       width: 70%;
       display: flex;
       flex-direction: row;
-      justify-content: flex-end;
-      margin-left: 25em;
+      justify-content: flex-start;
+      align-items: flex-end;
+      margin-left: 30em;
       position: absolute;
-      bottom: 23em;
+      bottom: 18em;
       .side-list-item {
-        margin-left: 80px;
+        margin-left: 60px;
         list-style-type: none;
         color: #d0bcb0;
         &.line {
@@ -154,3 +154,23 @@ body {
     }
   }
 }
+
+// @media screen and (min-width: 750px) {
+//   .side-nav-container {
+//     transform: rotate(180deg);
+//     .side-nav-link-container {
+//       width: 50%;
+//       display: block;
+//       .side-list-item {
+//         margin-left: 50px;
+//         list-style-type: none;
+//         color: black;
+//         &.line {
+//           width: 50px;
+//           border-width: 0 0 1px;
+//           border-style: wavy;
+//         }
+//       }
+//     }
+//   }
+// }
